# ai-peer-review

./: .gitignore  DEPLOY.md  Dockerfile  README.md  config.yaml  data.txt  docker-compose.yml  fly.toml  models.txt  pyproject.toml  railway.json  render.yaml  requirements.txt  search_agent.txt  start.sh
src/: __init__.py  config.py  costs.py  database.py  document.py  literature.py  main.py  orchestrator.py  prompts.py
src/agents/: __init__.py  base.py  communication.py  domain_expert.py  ethics.py  methodologist.py
src/evaluation/: __init__.py  ab_test.py  compare_providers.py  criteria.py  judge_prompts.py  literature_eval.py  review_eval.py
src/search_providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  openai_provider.py  perplexity_provider.py  pubmed_provider.py
src/web/: __init__.py  app.py
src/web/production/: __init__.py  app.py
src/web/production/templates/: base.html  index.html  review.html  settings.html  similar.html  test_models.html
src/web/templates/: base.html  error.html  evaluate_literature.html  evaluate_review.html  index.html  literature.html  review.html  similar.html
